--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.19.1",
     "@parcel/babel-preset-env": "^2.7.0",
     "babel-jest": "^29.0.3",
+    "eslint": "^8.51.0",
     "jest": "^29.0.3",
     "parcel": "^2.7.0"
   },
