--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "parcel index.html",
+    "cleanup": "rm -r .parcel-cache && rm -r dist",
     "test": "jest",
     "coverage": "jest --collect-coverage",
     "build": "parcel build index.html --dist-dir docs  --no-source-maps --public-url ./"
